<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Store"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Location"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/TeleNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/MobilePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/GroupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Group"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/etSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textStyle="normal|bold" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:textStyle="normal|bold" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tableChoiceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TC"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:id="@+id/TableChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">>

                    <RadioButton
                        android:id="@+id/Smoking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/S"
                        android:textStyle="normal|bold" />

                    <RadioButton
                        android:id="@+id/NonSmoking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/NS"
                        android:textStyle="normal|bold" />
                </LinearLayout>

            </RadioGroup>

            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Confirm" />

                <Button
                    android:id="@+id/Reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reset" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>